crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__parenthesized_negative.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(-1)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 2,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Negate(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 3,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
            value: Int(
                1,
            ),
        },
    ),
}
