crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__right_section.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(> 5)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: RightSection {
        operator: ">",
        right: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 4,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            value: Int(
                5,
            ),
        },
    },
}
