crates/nash-parse/src/expression/snapshots/nash_parse__expression__tuple__tests__spaced_parenthesized_negative.snap
---
source: crates/nash-parse/src/expression/tuple.rs
description: "Code:\n\n(- 1)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 2,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Negate(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 4,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            value: Int(
                1,
            ),
        },
    ),
}
